# Logger

./: CMakeLists.txt  README.md
examples/: LoggerTest.cpp
include/Logger/: LogDestination.h  LogFormatter.h  LogLevel.h  Logger.h  LoggerCore.h  LoggerCore.inl  LoggerMacros.h  LoggerManager.h  LoggerPCH.h
src/: LogDestination.cpp  LogFormatter.cpp  LoggerManager.cpp
